chore(release): v1.8.0 [skip test]

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "setup-cpp",
-  "version": "1.7.2",
+  "version": "1.8.0",
   "description": "Install all the tools required for building and testing C++/C projects.",
   "repository": "https://github.com/aminya/setup-cpp",
   "license": "Apache-2.0",
@@ -19,18 +19,18 @@
     "build.types.modern": "tsc -p ./tsconfig.types.json",
     "build.json": "shx cp ./src/*/*.json ./dist/legacy/ && shx cp ./dist/legacy/*.json ./dist/modern && bun ./node_modules/@aminya/minijson/dist/cli.js --file \"dist/**/*.json\"",
     "build.bash": "shx cp ./src/*/*.bash ./dist/legacy/ && shx cp ./dist/legacy/*.bash ./dist/modern",
-    "bump": "ncu -u -x execa,numerous,eslint,@types/eslint,which && pnpm update && pnpx typesync && pnpm run clean",
+    "bump": "ncu -u -x execa,numerous,eslint,@types/eslint,which && bun update && pnpx typesync && bun run clean",
     "bump.llvm": "tsx ./src/llvm/assets-list.ts",
     "bump.gcc": "tsx ./src/gcc/assets-list.ts",
     "bump.infer": "tsx ./src/infer/assets-list.ts",
-    "bump.versions": "run-p bump.llvm bump.gcc bump.infer && run-s format",
+    "bump.versions": "run-p bump.llvm bump.gcc bump.infer && bun run format",
     "clean": "shx rm -rf ./dist ./packages/*/dist ./exe ./.parcel-cache && shx mkdir -p ./dist/legacy ./dist/modern ./dist/modern ",
     "dev.vite": "cross-env NODE_ENV=development vite build --watch",
     "dev.packages": "turbo dev",
     "dev.root.tsc": "tsc --noEmit --pretty --watch",
     "dev": "run-p build.json dev.packages dev.root.tsc dev.vite",
-    "docs": "shx rm -rf packages/*/README.md && pnpm -r exec readme --path ../../dev/readme/template.md -y && pnpm -r exec ts-readme",
-    "format": "run-s lint.dprint",
+    "docs": "shx rm -rf packages/*/README.md && bun -r exec readme --path ../../dev/readme/template.md -y && bun -r exec ts-readme",
+    "format": "bun run lint.dprint",
     "lint": "turbo lint && run-p --aggregate-output -c 'lint.*'",
     "lint.cspell": "cspell lint --no-progress --show-suggestions --cache --cache-location ./.cache/cspell/.cspellcache",
     "lint.biome": "biome check --write --unsafe",
@@ -38,8 +38,8 @@
     "lint.root.tsc": "tsc --noEmit --pretty",
     "lint.root.eslint": "eslint './{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml}' --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/ --fix",
     "pack.exe": "shx rm -rf ./dist/tsconfig.tsbuildinfo && node ./dev/scripts/pack-exe.mjs",
-    "publish.all": "pnpm -r publish",
-    "prepublishOnly": "run-s build && shx rm ./dist/tsconfig.tsbuildinfo",
+    "publish.all": "bun -r publish",
+    "prepublishOnly": "bun run build && bun shx rm ./dist/tsconfig.tsbuildinfo",
     "test.lint": "run-p --aggregate-output -c 'test.lint.*' lint.cspell lint.root.tsc",
     "test.lint.root.eslint": "eslint './{src,dev}/**/*.{ts,tsx,js,jsx,cjs,mjs,json,yaml}' --no-error-on-unmatched-pattern --cache --cache-location ./.cache/eslint/",
     "test.lint.biome": "biome check",
